--- a/ico.css
+++ b/ico.css
@@ -163,7 +163,7 @@ font-weight: bold bold;
 	display: block;
 }
 .previlage-items{
-	display: flex;
+	display: flex;                                                            
 	flex-wrap: wrap;
 	justify-content: space-between;
 	align-items: center;
@@ -440,19 +440,35 @@ margin-top: -30px;
 	justify-content: center;
 	align-items: center;
 }
+.creation-img{
+	display: block;
+	position: relative;
+}
+.creation-img::before{
+	z-index: -1;
+	content: "";
+	display: block;
+	position: absolute;
+	top: 60px;
+	left: 60px;
+	width: 486px;
+	height: 267px;
+	border: 1px solid #dddddd;
+}
 .creation p span{
-color: #000000;
-font-family: Ubuntu-Bold;
-font-size: 18px;
+	color: #000000;
+	font-family: Ubuntu-Bold;
+	font-size: 24px;
 }
 .creation p{
 	margin-right: 115px;
-width: 460px;
-font-family: Ubuntu;
-font-weight: 400;
+	width: 460px;
+	font-size: 18px;
+	font-family: Ubuntu;
+	font-weight: 400;
 }
 .setup{
-		margin-bottom: 50px;
+	margin-bottom: 50px;
 	display: flex;
 	justify-content: center;
 	align-items: center;
@@ -460,14 +476,309 @@ font-weight: 400;
 .setup p span{
 	color: #000000;
 	font-family: Ubuntu-Bold;
-	font-size: 18px;
+	font-size: 24px;
 }
 .setup p{
+		font-size: 18px;
 	margin-left: 115px;
 	width: 460px;
 	font-family: Ubuntu;
 	font-weight: 400;
 }
+.setup-img{
+	display: block;
+	position: relative;
+}
+.setup-img::before{
+	z-index: -1;
+	content: "";
+	display: block;
+	position: absolute;
+	top: 60px;
+	left: -60px;
+	width: 486px;
+	height: 267px;
+	border: 1px solid #dddddd;
+}
+.open{
+	margin-bottom: 50px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.open p span{
+	color: #000000;
+	font-family: Ubuntu-Bold;
+	font-size: 24px;
+}
+.open p{
+		font-size: 18px;
+	margin-right: 115px;
+	width: 460px;
+	font-family: Ubuntu;
+	font-weight: 400;
+}
+.open-img{
+	display: block;
+	position: relative;
+}
+.open-img::before{
+	z-index: -1;
+	content: "";
+	display: block;
+	position: absolute;
+	top: 60px;
+	left: 60px;
+	width: 486px;
+	height: 267px;
+	border: 1px solid #dddddd;
+}
+.drop{
+	margin-bottom: 170px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+}
+.drop p span{
+	color: #000000;
+	font-family: Ubuntu-Bold;
+	font-size: 24px;
+}
+.drop p{
+		font-size: 18px;
+	margin-left: 115px;
+	width: 460px;
+	font-family: Ubuntu;
+	font-weight: 400;
+}
+.drop-img{
+	display: block;
+	position: relative;
+}
+.drop-img::before{
+	z-index: -1;
+	content: "";
+	display: block;
+	position: absolute;
+	top: 60px;
+	left: -60px;
+	width: 486px;
+	height: 267px;
+	border: 1px solid #dddddd;
+}
+.button{
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	height: 186px;
+	background-color: #009a8d;
+	margin-bottom: 95px;
+}
+.button button{
+	display: flex;
+	align-items: center;
+	justify-content: center;
+	color: #ffffff;
+	background:none;
+	letter-spacing: 1.2px;
+	font-weight: bold;
+	font-family: Ubuntu;
+	font-size: 22px;
+	width: 266px;
+	height: 66px;
+	border: 2px solid #ffffff;
+}
+.cases{
+	margin: 0 auto;
+	width: 1140px;
+	display: flex;
+	flex-direction: column;	
+	justify-content: center;
+	align-items: center;
+}
+.cases h2{
+	color: #000000;
+	font-family: Ubuntu-Bold;
+	font-size: 65px;
+	margin-bottom: 95px;
+}
+.owl-carousel{
+	width: 1140px;
+	display: flex;
+	flex-direction: row;
+	justify-content: space-between;
+	align-items: center;
+	margin-bottom: 110px;
+}
+.services{
+	margin: 0 auto;
+	width: 1140px;
+	display: flex;
+	flex-direction: column;	
+	justify-content: center;
+	align-items: center;
+}
+.services h2{
+	color: #000000;
+	font-family: Ubuntu-Bold;
+	font-size: 65px;
+	margin-bottom: 95px;
+}
+.services > p{
+	margin-bottom: 85px;
+    text-align: center;
+    width: 1140px;
+    height: 24px;
+    color: #000000;
+    font-family: Ubuntu-Bold;
+    font-size: 24px;
+    font-weight: 500;
+    line-height: 82px;
+}
+.assistance,.service,.development,.summary{
+	position: relative;
+	width: 265px;
+	height: 342px;
+	box-shadow: 0 2px 2px 3px rgba(0, 0, 0, 0.05);
+	background-color: #f8f8f8;
+	display: flex;
+	flex-direction: column;
+
+}
+.items{
+	width: 1140px;
+	margin: 0 auto 107px;
+	display: flex;
+	justify-content: space-around;
+	align-items: center;
+}
+h3{ 
+	margin: 50px auto 45px;
+	text-align: center;
+	color: #000000;
+	font-family: Ubuntu-Bold;
+	font-size: 22px;
+}
+.assistance::after,.service::after,.development::after,.summary::after{
+	top: 115px;
+	left: 43.5px;
+	content: "";
+	position: absolute;
+	width: 178px;
+	height: 4px;
+	background-color: #00a583;
+}
+.assistance::before, .summary::before{
+	content: "";
+	position: absolute;
+	width: 51px;
+ 	height: 44px;
+ 	background: url(img/triangle.png);
+ 	left: 110px;
+    top: 285px;
+}
+.service::before{
+	content: "";
+	position: absolute;
+	width: 127px;
+	left: 0px;
+    top: 263px;
+	height: 81px;
+ 	background: url(img/triangle_left.png);
+}
+.development::before{
+	content: "";
+	position: absolute;
+	width: 127px;
+	left: 138px;
+    top: 263px;
+	height: 81px;
+ 	background: url(img/triangle_right.png);	
+}
+.contacts{
+	height: 504px;
+	background-image: url(img/contact_background.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
+.contacts h2{
+	width: 308px;
+	height: 48px;
+	color: #00b384;
+	font-family: Ubuntu;
+	font-size: 65px;
+	font-weight: 400;
+	line-height: 45px;
+	text-align: center;
+	margin-bottom: 50px;
+}
+.contact{
+	padding-top: 90px;
+	width: 1140px;
+	margin: 0 auto;
+	display: flex;
+	flex-direction: column;
+	align-items: center;
+}
+.contact p {
+	width: 742px;
+	height: 24px;
+	color: #fefefe;
+	font-family: Ubuntu;
+	font-size: 24px;
+	font-weight: 500;
+	line-height: 45px;
+	margin-bottom: 65px;
+}
+.forms{
+	width: 1168px;
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+}
+.forms input{
+	margin-bottom: 45px;
+	text-align: center;	
+	color: #ffffff;
+	font-family: Ubuntu;
+	font-size: 18px;
+	font-weight: 400;
+	line-height: 45px;
+	background:none;
+	width: 380px;
+	height: 50px;
+	border: 1px solid #ffffff;
+}
+.send{
+	width: 198px;
+	height: 48px;
+	border: 2px solid #00b384;
+	background-color: #00b384;
+	color: #fefefe;
+	font-family: Ubuntu;
+	font-size: 18px;
+	font-weight: 700;
+	line-height: 33px;
+}
+.footer{
+	width: 1140px;
+	margin: 0 auto;
+}
+li a {
+	text-decoration: none;
+	color: #071a13;
+	font-family: Ubuntu;
+	font-size: 16px;
+	font-weight: 400;
+	line-height: 30px;
+}
+li{
+	list-style-type: none;
+}
+
+
+
 
 
 
